@@ -2142,7 +2142,7 @@ MEM_TOP_DOWN = 1048576
 
 # Generated by h2py from \msvc20\include\winnt.h
 # hacked and split by mhammond.
-INVALID_HANDLE_VALUE = 0xFFFFFFFF
+INVALID_HANDLE_VALUE = 4294967295L
 SEC_FILE = 8388608
 SEC_IMAGE = 16777216
 SEC_RESERVE = 67108864
